--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Carlos Andrés Selman David - 2018325</h1>
+    <h2>Centro Educativo Técnico Laboral Kinal</h2>
 </body>
 </html>
